Updated version value.

--- a/Deployment/parking-monsterr.nuspec
+++ b/Deployment/parking-monsterr.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>parking-monster</id>
-    <version>$version</version>
+    <version></version>
     <authors>Visma Spcs</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Demo</description>
