--- a/Deployment/parking-monsterr.nuspec
+++ b/Deployment/parking-monsterr.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>parking-monster</id>
     <version>0</version>
-    <authors>Visma Spcs</authors>
+    <authors>James Manglinong</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Demo</description>
   </metadata>
@@ -12,4 +12,3 @@
   </files>
 </package>
 
-<!-- File src (Team Server) = C:\TeamCity\buildAgent\work\751c399745e782c8\parking-monster\Sites\_PublishedWebsites\parking-monster -->
