--- a/parking-monster/parking-monster.csproj
+++ b/parking-monster/parking-monster.csproj
@@ -167,6 +167,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -294,5 +295,4 @@
   </Target>
   <Target Name="AfterBuild">
   </Target> -->
-  
 </Project>
